# android-native-code

./: CMakeLists.txt  README.md  main.cpp
